# Advent2020

./: .gitignore  .travis.yml  CMakeLists.txt  Day11.cc  Day12.cc  Day13.cc  Day14.cc  Day14.hpp  Day2.cc  Day3.cc  Day4.cc  Day5.cc  Day6.cc  Day7.cc  Day8.cc  Day9.cc  Example.cc  Example.hpp  README.md  fourNumberSum.cc  inputparse.h  minRewards.cc  seat.h  seats.h  zigzag.cc
include/: Day14.hpp
input/: MiriLetter.txt  day12short.txtr
src/: Day1.cc  Day10.cc  Day11.cc  Day12.cc  Day13.cc  Day14.cc  Day4.cc  Day5.cc  Day6.cc  Day7.cc
test/: CMakeLists.txt  ExampleTests.cc
